# tauri-plugin-sql

./: Cargo.toml  package.json
src/: lib.rs  modified-plugin.rs  plugin.rs
