[package]
name = "tauri-plugin-sql"
version = "0.0.0"
authors = ["Tauri Programme within The Commons Conservancy"]
description = "A Tauri plugin for easily interfacing with SQL databases"
license = "Apache-2.0 OR MIT"
edition = "2021"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
thiserror = "1.0"
serde = "1.0"
serde_json = { version = "1.0.39", features = ["raw_value"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "json", "mssql"] }
tokio = { version = "1.17", features = ["sync"] }
futures = "0.3"
tauri = "1.0.0-rc.3"

[features]
sqlite = ["sqlx/sqlite"]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]
mssql = ["sqlx/mssql"]
